use version catalog

--- a/LoopHintSearchView/gradle/libs.versions.toml
+++ b/LoopHintSearchView/gradle/libs.versions.toml
@@ -27,7 +27,7 @@ rxjava2-rxkotlin = { module = "io.reactivex.rxjava2:rxkotlin", version = "2.4.0"
 rxJava2 = [
     "rxjava2-rxjava",
     "rxjava2-rxandroid",
-    "rxjava2-rxkotlin"
+    "rxjava2-rxkotlin",
 ]
 
 
